--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "online-courses-platform",
     "version": "1.0.0",
     "description": "Платформа онлайн-тестирования",
-    "main": "dist/server.js",
+    "main": "dist/app.js",
     "scripts": {
-        "start": "node dist/server.js",
-        "dev": "nodemon --exec ts-node src/server.ts",
+        "start": "node dist/app.ts",
+        "dev": "npm run build && nodemon dist/app.js",
         "build": "tsc",
         "prisma:generate": "prisma generate",
         "prisma:studio": "prisma studio"
@@ -34,6 +34,7 @@
         "nodemon": "^3.1.7",
         "prisma": "^6.0.0",
         "ts-node": "^10.9.2",
+        "ts-node-dev": "^2.0.0",
         "typescript": "^5.6.3"
     }
 }
