--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "dev": "npm run build && nodemon dist/app.js",
         "build": "tsc",
         "prisma:generate": "prisma generate",
-        "prisma:studio": "prisma studio"
+        "prisma:studio": "prisma studio",
+        "test": "jest"
     },
     "keywords": [
         "node",
@@ -29,10 +30,15 @@
     "devDependencies": {
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
+        "@types/jest": "^30.0.0",
         "@types/morgan": "^1.9.6",
         "@types/node": "^22.7.5",
+        "@types/supertest": "^2.0.16",
+        "jest": "^30.2.0",
         "nodemon": "^3.1.7",
         "prisma": "^6.0.0",
+        "supertest": "^6.3.4",
+        "ts-jest": "^29.4.5",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.6.3"
