--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,18 +4,14 @@
         "module": "commonjs",
         "moduleResolution": "node",
         "outDir": "dist",
-        "rootDir": "src",
+        "rootDir": ".",
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
         "skipLibCheck": true,
         "resolveJsonModule": true
     },
-    "include": [
-        "src"
-    ],
-    "exclude": [
-        "node_modules"
-    ]
+    "include": ["src", "tests"],
+    "exclude": ["node_modules", "dist"]
 }
 
