--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,11 +13,16 @@ services:
     build: .
     container_name: online_courses_app
     ports:
-      - "5000:5000"
+      - "3000:3000"
     env_file:
       - .env
-    depends_on:
-      - mongo
+    environment:
+      - DATABASE_URL=mongodb://mongo:27017/online-courses
+      - PORT=3000
+    volumes:
+      - ./src:/app/src 
+      - ./package.json:/app/package.json
+      - ./tsconfig.json:/app/tsconfig.json
     command: npm run dev
 
 volumes:
