--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "dist/app.js",
     "scripts": {
         "start": "node dist/app.js",
-        "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
+        "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
         "build": "tsc -p tsconfig.build.json",
         "test": "jest"
     },
