--- a/package.json
+++ b/package.json
@@ -1,43 +1,31 @@
 {
-    "name": "online-courses-platform",
+    "name": "online-courses-services",
     "version": "1.0.0",
-    "description": "Платформа онлайн-тестирования",
-    "main": "dist/app.js",
+    "description": "Сервисы работы с БД для платформы онлайн-курсов",
+    "main": "dist/mongoinit.js",
     "scripts": {
-        "start": "node dist/app.js",
-        "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-        "build": "tsc -p tsconfig.build.json",
-        "test": "jest"
+        "test": "vitest run",
+        "test:watch": "vitest",
+        "test:ui": "vitest --ui",
+        "build": "tsc",
+        "dev": "tsx watch demo.ts"
     },
     "keywords": [
-        "node",
-        "express",
-        "mongoose",
         "mongodb",
-        "typescript",
-        "education",
-        "backend"
+        "typescript", 
+        "zod",
+        "services",
+        "database"
     ],
     "dependencies": {
-        "cors": "^2.8.5",
-        "dotenv": "^16.4.5",
-        "express": "^4.21.1",
-        "mongoose": "^8.3.0",
-        "morgan": "^1.10.0"
+        "mongodb": "^6.0.0",
+        "zod": "^3.0.0"
     },
     "devDependencies": {
-        "@types/cors": "^2.8.17",
-        "@types/express": "^4.17.21",
-        "@types/jest": "^30.0.0",
-        "@types/morgan": "^1.9.6",
-        "@types/node": "^22.7.5",
-        "@types/supertest": "^2.0.16",
-        "jest": "^30.2.0",
-        "nodemon": "^3.1.7",
-        "supertest": "^6.3.4",
-        "ts-jest": "^29.4.5",
-        "ts-node": "^10.9.2",
-        "ts-node-dev": "^2.0.0",
-        "typescript": "^5.6.3"
+        "vitest": "^1.0.0",
+        "@vitest/ui": "^1.0.0",
+        "tsx": "^4.7.0",
+        "typescript": "^5.0.0",
+        "@types/node": "^20.0.0"
     }
 }
