--- a/package.json
+++ b/package.json
@@ -1,31 +1,25 @@
 {
     "name": "online-courses-services",
-    "version": "1.0.0",
-    "description": "Сервисы работы с БД для платформы онлайн-курсов",
-    "main": "dist/mongoinit.js",
+    "version": "3.0.0",
+    "description": "Платформа онлайн-тестирования",
     "scripts": {
         "test": "vitest run",
         "test:watch": "vitest",
         "test:ui": "vitest --ui",
+        "test:coverage": "vitest run --coverage",
         "build": "tsc",
         "dev": "tsx watch demo.ts"
     },
-    "keywords": [
-        "mongodb",
-        "typescript", 
-        "zod",
-        "services",
-        "database"
-    ],
     "dependencies": {
         "mongodb": "^6.0.0",
         "zod": "^3.0.0"
     },
     "devDependencies": {
-        "vitest": "^1.0.0",
-        "@vitest/ui": "^1.0.0",
+        "@types/node": "^20.0.0",
+        "@vitest/coverage-v8": "^4.0.15",
+        "@vitest/ui": "^4.0.15",
         "tsx": "^4.7.0",
         "typescript": "^5.0.0",
-        "@types/node": "^20.0.0"
+        "vitest": "^4.0.15"
     }
 }
